# ovpn-desktop

./: README.md  package-lock.json  package.json  sync-version.cjs  tsconfig.json
rbw-vpn-client/: index.html
rbw-vpn-client/src-tauri/: tauri.conf.json
rbw-vpn-client/src-tauri/src/: api.rs  main.rs  state.rs
rbw-vpn-client/src/components/: ApiKeyAuth.tsx  ConfigList.tsx  GeneratorConfig.tsx  VpnStatus.tsx
rbw-vpn-client/src/styles/: VpnStatus.css  global.css
src/: App.css  App.tsx  main.tsx
src-tauri/: .gitignore  Cargo.toml  app.manifest  embed-admin.ps1  installer.nsi  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: api.rs  commands.rs  main.rs  openvpn.rs  state.rs  storage.rs
src/components/: ApiKeyAuth.tsx  Dashboard.tsx  VpnStatus.tsx
src/lib/: api.ts
src/store/: app.ts
src/styles/: ApiKeyAuth.css  ConfigList.css  Dashboard.css  GenerateConfig.css  VpnStatus.css
