[package]
name = "rbw-vpn-client"
version = "0.1.0"
description = "ovpn.rbwtech.io Client Side Application"
authors = ["RBW-Tech"]
edition = "2021"

[lib]
name = "rbw_vpn_client_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["shell-open", "process-command-api", "process-relaunch-dangerous-allow-symlink-macos", "fs-all", "dialog-all"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.4"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winsvc", "winuser", "processthreadsapi"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[[bin]]
name = "rbw-vpn-client"
path = "src/main.rs"