[package]
name = "rbw-vpn-client"
version = "0.2.0"
description = "ovpn.rbwtech.io Client Side Application"
authors = ["RBW-Tech"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.4"
base64 = "0.21"
regex = "1.10"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [
    "winsvc", 
    "winuser",   
    "processthreadsapi", 
    "securitybaseapi", 
    "winnt"
] }
windows = { version = "0.58", features = [
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging", 
    "Win32_Foundation",
] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[[bin]]
name = "rbw-vpn-client"
path = "src/main.rs"
